examples/good/in/13-02-local-function.see
void main() {
    int fun() {
      return 15;
    }

    {
        int fun() {
            return 21;
        }
        printInt(fun()); // 21
    }

    {
        printInt(fun()); // 15
    }
}
