examples/bad/in/11-01-function-args.see
string fun(int a, int b, int c) {
    return toStr(a) + toStr(b);
}

void main() {
    fun(21, 15);

    return;
}